# yumi_render

./: CMakeLists.txt  main.cpp
header/: pixel_shader.h  primitive_bank.h  render_type.h  sync_fifo.h  utils.h  vertex_bank.h
helper_code/: binary_3d.h  binnary_float.cpp  obj2binary_3d.cpp
src/: image_output.cpp  pixel_shader.cpp  primitive_assembler.cpp  primitive_bank.cpp  primitive_dispatcher.cpp  rendering_controller_single_thread.cpp  short_to_float.cpp  vertex_bank.cpp  vertex_transform_engine.cpp
